OO-3723: remove OlatRootFile and Folder implementations
Move the functions of OlatRootFile and OlatRootFolder to the Local
implementations to simplify the use of VFS, implements factory methods
in VFSManager, reduce the number of call to meta informations in folder
listing